# CAC-Launcher

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  notes.md  package-lock.json  package.json  run.ps1  test.rs
.cargo/: config.toml
.github/workflows/: rust-clippy.yml  rust.yml
CAC-config/: hashes.json  servers.json
iced-ui/: Cargo.toml
iced-ui/src/: logo_ascii.txt  main.rs
public/: cac_logo.psd
src/: App.css  App.jsx  UI.rs  configs.rs  dirhash.rs  download.rs  downloader.rs  lib.rs  main.rs  msgraph.rs  secrets.rs  servers.rs  test-main.rs
src-backend/: .gitignore  Cargo.toml  downloader.py  modlist.txt  notes.md  readme.md
src-backend/CAC-config/: hashes.json  mods.json
src-backend/src/: dirhash.rs  downloader.rs  lib.rs  main.rs  msgraph.rs  secret.rs
src-backend/tests/: tests.rs
src-backend/unzip/lib7z/: README.md  build.bat  makefile
src-backend/unzip/lib7z/src/: lib.c  precomp.h
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
tests/: tests.rs
tmp/: @CBA_A3_3.18.1.241014.7z
