[package]
name = "src-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
urlencoding = "2.1.3"

[profile.dev]
incremental = true 

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
