[package]
name = "src-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
blake3 = "1.8.2"
chrono = "0.4.40"
jwalk = "0.8.1"
memmap2 = "0.9.5"
rayon = "1.10.0"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "cookies", "json","native-tls"] }
reqwest_cookie_store = "0.8.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
stopwatch = "0.0.7"
tokio-util = "0.7.14"
urlencoding = "2.1.3"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[profile.dev]
incremental = true 

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
